# tree-sitter-query-reverser

./: Cargo.toml  README.md
src/: lib.rs  main.rs
test/stubs/: gleam-input.scm  gleam-output.scm  swift-output.scm
