[package]
name = "tree-sitter-query-reverser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tsqr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.11"
tree-sitter = "0.24"
tree-sitter-query = { git = "https://github.com/tree-sitter-grammars/tree-sitter-query", version = "0.4.0", branch = "update" }

[build-dependencies]
cc="*"

[dev-dependencies]
pretty_assertions = "1.4.1"
